🚜🍇 Updated with Glitch

--- a/public/styles/draw.styl
+++ b/public/styles/draw.styl
@@ -14,6 +14,13 @@ section.this-week
   .topic
     font-size: 4.0rem
     line-height: 4.5rem
+    // .topic-secondary
+    //   font-family: menlo
+    //   font-weight: normal
+    //   font-size: 1.6rem
+    //   color: secondary
+
+
     // &:first-letter
     //   text-transform: uppercase
 
@@ -192,6 +199,7 @@ section.drawing
 .art-critic
   img
     vertical-align: middle
+  .bubbles
     margin-right: 5px
   p
     vertical-align: middle
