🛣🌔 Updated with Glitch

--- a/public/styles/draw.styl
+++ b/public/styles/draw.styl
@@ -47,6 +47,10 @@ palette-color-small = 30px
 section.palette
   user-select: none
   margin-bottom: 4rem
+  @media(max-width: 400px)
+    margin-bottom: 0
+  .colors
+    margin: 0
   .color-well
     padding-right: 1rem
     display: inline-block
