--- a/views/includes/draw.jade
+++ b/views/includes/draw.jade
@@ -58,7 +58,7 @@ section.save-drawing
   .art-critic
     img.critic(src=critic alt="art critic" width=55)
     img.bubbles(src=bubbles alt="bubbles" width=20)
-    p Paint with passion
+    p#critique Paint with passion
   p.primary-button.save-button Share Masterpiece →
   p.primary-button.saving-button.hidden 
     span.saving Saving
