--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -2,9 +2,9 @@
 footer
 
   p
-    a(href="/this-week" class='secondary-link') This Week
+    a(href="/this-week" class='secondary-link') This Week So Far ✨
   p 
-    a(href="/last-week" class='secondary-link') Last Week
+    a(href="/last-week" class='secondary-link') Last Week 💌
 
   hr
 
