📙🐏 Updated with Glitch

--- a/views/includes/draw.jade
+++ b/views/includes/draw.jade
@@ -33,13 +33,7 @@ section.palette
         .key-guide 6
     .color-well
       li.shuffle(title="shuffle") 
-        span.label 
-          span (
-          span /
-          span ・
-          span ・
-          span )
-          span ノ
+        span.label (/・・)ノ
         .key-guide 7
 
 section.drawing
